remove footer and fix scrollbar

--- a/public/index.css
+++ b/public/index.css
@@ -7,9 +7,8 @@ body {
 	flex-direction: column;
 	height: 100vh;
 	width: 100vw;
-	overflow-x: hidden; /* Prevent horizontal scrolling */
-	overflow-y: auto;
 	box-sizing: border-box;
+	overflow: auto;
 }
 
 /* Particles background */
@@ -28,8 +27,9 @@ h1 {
 	color: #d8a75c;
 	text-align: left;
 	margin-left: 40px;
-	margin-top: 8px;
+	margin-top: 25px;
 	padding-right: 20px;
+	width: 65vw;
 }
 
 h2 {
@@ -39,9 +39,12 @@ h2 {
 	color: #ffffff;
 	text-align: left;
 	margin-left: 40px;
-	margin-top: -40px;
+	margin-top: -30px;
 	padding-right: 20px;
-	line-height: 2.3;
+}
+
+h2 p {
+	line-height: 1.3; /* Adjust the line height for paragraphs */
 }
 
 /* Sidebar styling */
@@ -116,6 +119,7 @@ h2 {
 .sidebar-nav button .material-symbols-outlined {
 	font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 	margin-right: 10px; /* Space between the icon and text */
+	padding-left: 5px;
 	vertical-align: text-bottom; /* Aligns the icon with the text */
 	font-size: 20px;
 }
@@ -124,6 +128,7 @@ h2 {
 #hamburger-menu {
 	margin-top: 15px;
 	margin-left: 25px;
+	width: 20px;
 	font-size: 1.5em;
 	color: white;
 	background-color: transparent;
@@ -131,21 +136,24 @@ h2 {
 	cursor: pointer;
 	display: none;
 	z-index: 1;
+	position: relative;
+	padding-bottom: 10px;
 }
 
 /* Main content styling */
 main {
 	margin-left: 250px;
 	transition: margin-left 0.3s ease;
-	width: 100vw; /* Prevent horizontal overflow */
-	overflow-x: hidden;
+	width: calc(100vw - 250px); /* Prevent horizontal overflow */
 	box-sizing: border-box;
+	min-height: 100vh;
 }
 
 /* Footer styling */
 footer {
 	width: 100vw;
-	padding: 5px;
+	height: 34px;
+	padding: 20px;
 	font-family: "Poppins", sans-serif;
 	background-color: #402531;
 	color: #fff;
@@ -154,6 +162,7 @@ footer {
 	z-index: 2;
 	box-sizing: border-box;
 	overflow-x: hidden;
+	position: relative;
 }
 
 .footer-text p {
@@ -187,19 +196,19 @@ footer {
 	main {
 		margin-left: 0;
 		padding: 10px;
+		width: 100vw;
 	}
 
 	h1 {
 		font-size: 2.5em;
 		margin-left: 15px;
-		padding-right: 15px;
+		margin-top: -20px;
 	}
 
 	h2 {
 		font-size: 1em;
 		margin-left: 15px;
-		margin-top: -30px;
-		padding-right: 15px;
+		margin-top: -15px;
 	}
 
 	.footer-text p {
